syntax = "proto3";

option java_multiple_files = true;
package com.huma.grpc;

message RpcReq {
  string name = 1;
  string school = 2;
}

message RpcResp {
  string result = 1;
}

service HelloWorldService {
  rpc sayHello (RpcReq) returns (RpcResp);
}
